style: ajout de texte et d'un fond

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" rel="stylesheet">
     <title>Instant Weather</title>
 </head>
 <body>
-    <input type="search">
+    <h1>Instant Weather</h1>
+    <p>Entrer votre code postal:<input type="search" id="codePostalInput"><button id="recherche">Rechercher</button></p>
+
+    <script src ="js/script.js"></script>
 </body>
 </html>
