style: modification fond et couleur/ajout d'images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,9 @@
 <body>
     <h1>Instant Weather</h1>
     <p>Entrer votre code postal:<input type="search" id="codePostalInput"><button id="recherche">Rechercher</button></p>
-
+    <select id="villeListe">
+        <option>--Sélectionner une ville--</option>
+    </select>
     <script src ="js/script.js"></script>
 </body>
 </html>
