--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <h1>Instant Weather</h1>
-    <p>Entrer votre code postal:<input type="search" id="codePostalInput"><button id="recherche">Rechercher</button></p>
+    <input type="search" id="codePostalInput" placeholder="Entrez votre code postal"><button id="recherche">Rechercher</button>
+    <br>
     <select id="villeListe">
         <option>--Sélectionner une ville--</option>
     </select>
+    <div class="resultat cache" >
+    </div>
     <script src ="js/script.js"></script>
 </body>
 </html>
