✨ feat: choix de la ville dans la liste déroulante

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Instant Weather</h1>
     <input type="search" id="codePostalInput" placeholder="Entrez votre code postal"><button id="recherche">Rechercher</button>
     <br>
-    <select id="villeListe">
+    <select id="villeListe" class="cache">
         <option>--Sélectionner une ville--</option>
     </select>
     <div class="resultat cache" >
