--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet">
     <title>Instant Weather</title>
 </head>
-<body>
-    <h1>Instant Weather</h1>
-    <input type="search" id="codePostalInput" placeholder="Entrez votre code postal"><button id="recherche">Rechercher</button>
+<body id="fond">
+    <h1 id="instantWeather">Instant Weather</h1>
+    <input type="search" id="codePostalInput" placeholder="Entrez votre code postal" aria-label="code postal"><button id="recherche" >Rechercher</button>
     <br>
-    <select id="villeListe">
+    <select id="villeListe" aria-label="ville">
         <option>--Sélectionner une ville--</option>
     </select>
     <div class="resultat cache" >
