style: ajout google font

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <select id="villeListe" aria-label="ville">
         <option>--Sélectionner une ville--</option>
     </select>
-    <div class="resultat cache" >
+    <div class="resultat" >
     </div>
     <script src ="js/script.js"></script>
 </body>
