--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet">
     <title>Instant Weather</title>
 </head>
 <body>
-    <h1>Instant Weather</h1>
-    <input type="search" id="codePostalInput" placeholder="Entrez votre code postal"><button id="recherche">Rechercher</button>
-    <br>
-    <select id="villeListe" class="cache">
-        <option>--Sélectionner une ville--</option>
-    </select>
-    <div class="resultat cache" >
-    </div>
-    <script src ="js/script.js"></script>
+    <input type="search">
 </body>
 </html>
