--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </select>
     <div class="resultat" >
     </div>
+    <script src="js/Token.js"></script>
+    <script src="js/WeatherCard.js"></script>
     <script src ="js/script.js"></script>
 </body>
 </html>
