--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <option>--Sélectionner une ville--</option>
     </select>
 
+    <label>Nombre de jours :</label>
+    <input id="inputNbJours" type="number" value="1" min="1" max="7"></input>
+
     <div class="resultat cache" id="resultat">
         <div class="weatherCard" id="weatherCard">
             <p>Ville : <span id="WCVille"></span></p>
