--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
     <input type="search" id="codePostalInput" placeholder="Entrez votre code postal" aria-label="code postal"><button id="recherche" >Rechercher</button>
     <br>
 
-    <select id="villeListe" class="cache" aria-label="ville">
+    <div id="choixVille" class="cache">
+        <select id="villeListe" aria-label="ville">
         <option>--Sélectionner une ville--</option>
-    </select>
+        </select>
+
+        <label>Nombre de jours :</label>
+        <input id="inputNbJours" type="number" value="1" min="1" max="7"></input>
+
+        <button id="voirInformations">Voir les informations</button>
+    </div>
+    
+    
 
     <label>Nombre de jours :</label>
     <input id="inputNbJours" type="number" value="1" min="1" max="7"></input>
