--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet">
     <title>Instant Weather</title>
+    <script src="https://kit.fontawesome.com/6faa555a95.js" crossorigin="anonymous"></script>
 </head>
 <body id="fond">
     <h1 id="instantWeather">Instant Weather</h1>
     <input type="search" id="codePostalInput" placeholder="Entrez votre code postal" aria-label="code postal"><button id="recherche" >Rechercher</button>
+  
     <br>
+               
 
     <select id="villeListe" class="cache" aria-label="ville">
         <option>--Sélectionner une ville--</option>
@@ -18,19 +21,27 @@
     <div class="resultat cache" id="resultat">
         <div class="weatherCard" id="weatherCard">
             <p>Ville : <span id="WCVille"></span></p>
-            <p>Temps <span id="WCBref"></span></p>
+            <div class = "icon">
+                <i  id ="nuage" class="fa-solid fa-cloud fa-beat cache"></i>
+                <i  id = "soleil" class="fa-solid fa-sun fa-beat cache"></i>
+                <i  id = "neige" class="fa-solid fa-snowflake fa-beat cache"></i>
+                <i  id = "pluie" class="fa-sharp fa-solid fa-cloud-rain fa-beat cache"></i>
+                <i  id = "vent" class="fa-solid fa-wind fa-beat cache"></i>
+                <img src="icone/rain.png" id="grele" class = "cache">
+                <img src="icone/brouillard.png"  id = "brume" class="cache">
+                <i  id = "orage" class="fa-solid fa-bolt fa-beat" class="cache"></i>
+            </div>
             <p>Température min : <span id="WCTemperatureMin"></span></p>
             <p>Température max : <span id="WCTemperatureMax"></span></p>
             <p>Probabilité de pluie : <span id="WCPluie"></span></p>
-            <p>Temps d'ensoleillements : <span id="WCEnsoleillement"></span> heures.</p>
-            <p>(valeurs de test)</p>
+            <p>Temps d'ensoleillements : <span id="WCEnsoleillement"></span></p>
         </div>
     </div>
     <script src="js/Token.js"></script>
     <script src="js/WeatherCard.js"></script>
     <script src="js/arriere-plan.js"></script>
     <script src ="js/interface.js"></script>
-
+    <img scr = "icone/rain.png"  id = "brume">
     
 </body>
 </html>
