fix: conformiter a la norme W3C

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <i  id = "neige" class="fa-solid fa-snowflake fa-beat cache"></i>
                 <i  id = "pluie" class="fa-sharp fa-solid fa-cloud-rain fa-beat cache"></i>
                 <i  id = "vent" class="fa-solid fa-wind fa-beat cache"></i>
-                <img src="icone/rain.png" id="grele" class = "cache">
-                <img src="icone/brouillard.png"  id = "brume" class="cache">
-                <i  id = "orage" class="fa-solid fa-bolt fa-beat" class="cache"></i>
+                <img src="icone/rain.png" id="grele" class = "cache" alt="icone_pluie">
+                <img src="icone/brouillard.png"  id = "brume" class="cache" alt="icone_brume">
+                <i  id = "orage" class="fa-solid fa-bolt fa-beat" ></i>
             </div>
             <p>Température min : <span id="WCTemperatureMin"></span></p>
             <p>Température max : <span id="WCTemperatureMax"></span></p>
